<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:borderWidth="0dp"
            app:navigationIcon="@drawable/ic_keyboard_backspace_white_24dp">

            <android.support.v7.widget.LinearLayoutCompat android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/title_activity_service_add"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_customer_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_service_add_section_box">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_services_add_section_box"
            android:background="@color/lb500"
            android:gravity="center_vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="@dimen/service_add_section_label"
                android:layout_height="wrap_content"
                android:text="@string/label_customer"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_customer_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_click_to_add"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="normal|italic"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_vehicle_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_service_add_section_box">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_services_add_section_box"
            android:background="@color/lb500"
            android:gravity="center_vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="@dimen/service_add_section_label"
                android:layout_height="wrap_content"
                android:text="@string/label_vehicle"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_vehicle_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_click_to_add"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="normal|italic"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_odometer_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/margin_service_add_section_box">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_services_add_section_box"
                android:paddingRight="@dimen/padding_services_add_section_box"
                android:gravity="center_vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_odometer"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_odometer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="60dp"
                        android:gravity="end"
                        android:fontFamily="sans-serif-light"
                        android:inputType="numberDecimal"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_km"
                        android:fontFamily="sans-serif-thin"
                        android:textSize="12sp"
                        android:textStyle="normal|bold"/>

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/margin_service_add_section_box">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_services_add_section_box"
                android:paddingRight="@dimen/padding_services_add_section_box"
                android:gravity="center_vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/label_date"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/input_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:fontFamily="sans-serif-light"
                    android:inputType="numberDecimal"
                    android:focusable="false"/>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.CardView
        android:id="@+id/card_treatments_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_service_add_section_box">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_services_add_section_box"
            android:gravity="center_vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_treatments"
                android:textSize="12sp"
                android:textStyle="normal|bold" />

            <android.support.v7.widget.ListViewCompat
                android:id="@+id/list_treatments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_none"
                android:listSelector="@drawable/selector_none"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_click_to_add"
                android:fontFamily="sans-serif-light"
                android:textSize="12sp"
                android:textStyle="normal|italic"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_parts_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_service_add_section_box">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_services_add_section_box"
            android:gravity="center_vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_parts"
                android:textSize="12sp"
                android:textStyle="normal|bold" />

            <android.support.v7.widget.ListViewCompat
                android:id="@+id/list_parts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_none"
                android:listSelector="@drawable/selector_none"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_click_to_add"
                android:textSize="12sp"
                android:fontFamily="sans-serif-light"
                android:textStyle="normal|italic"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_service_add_section_box">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_services_add_section_box"
            android:gravity="bottom">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_total_cost"
                android:textSize="12sp"
                android:textStyle="normal|bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_currency"
                android:textSize="12sp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_service_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_zero"
                android:textSize="16sp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_service_add_section_box"
        android:layout_marginRight="@dimen/margin_service_add_section_box"
        android:paddingLeft="@dimen/padding_services_add_section_box"
        android:paddingRight="@dimen/padding_services_add_section_box">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkbox_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_payment"
            android:layout_gravity="start|center_vertical"
            android:checked="true" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/label_save"
            android:layout_gravity="end"/>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>